fix: 修改z-index（ui包内）

--- a/packages/ui/style/core/_layout.scss
+++ b/packages/ui/style/core/_layout.scss
@@ -16,7 +16,7 @@
   transition: width 0.28s;
   font-size: 0;
   background: $layout-color-bg;
-  z-index: 10;
+  z-index: $zindex-layout-sidebar;
 
   &__title {
     font-size: 14px;
